# mtg_deck_rec

./: LICENSE  README.md  pyproject.toml
mtg_deck_rec/: __main__.py  cli.py  models.py
mtg_deck_rec/analysis/: comparator.py
mtg_deck_rec/api/: client.py  edhrec.py  moxfield.py  scryfall.py
mtg_deck_rec/display/: terminal.py
mtg_deck_rec/llm/: client.py  prompts.py
mtg_deck_rec/web/: app.py
static/: app.js  style.css
templates/: index.html
